--- a/wp-content/themes/makeblog/less/make/header.less
+++ b/wp-content/themes/makeblog/less/make/header.less
@@ -334,7 +334,7 @@ li.top-cat-item a:visited {
 
 #menu-make-secondary-nav>li>a:first-child:hover{
    text-decoration:none !important;
-   cursor: pointer !important;
+   cursor: default !important;
 }
 
 .mega-nav-footer {
